# nanoSIGA

./: .gitignore  CMakeLists.txt  README.md  log4cxx.properties  parameter.ini
src/: cluster.cpp  cluster_builder.cpp  cluster_builder.h  constant.cpp  constant.h  contig.cpp  contig_builder.cpp  contig_builder.h  correct.cpp  correct_builder.cpp  correct_builder.h  index.cpp  index.h  main.cpp  map.cpp  map.h  mole.cpp  mole.h  overlap.cpp  overlap_builder.cpp  overlap_builder.h  refine.cpp  refine_builder.cpp  refine_builder.h  runner.h
